--- a/hw_20211227maikon/grid.css
+++ b/hw_20211227maikon/grid.css
@@ -20,6 +20,7 @@
     box-sizing: border-box;
 }
 /* 1~12意思是12分之幾 */
+/* 手機板尺寸 */
 .col-1{width: 8.333333%;}
 .col-2{width: 16.666666%;}
 .col-3{width: 25%;}
@@ -33,6 +34,7 @@
 .col-11{width: 91.666666%;}
 .col-12{width: 100%;}
 
+/* 最小尺寸768 */
 @media screen and (min-width: 768px){
     .col-md-1{width: 8.333333%;}
     .col-md-2{width: 16.666666%;}
@@ -47,6 +49,7 @@
     .col-md-11{width: 91.666666%;}
     .col-md-12{width: 100%;}
 }
+/* 最小尺寸1024 */
 @media screen and (min-width: 1024px){
     .col-lg-1{width: 8.333333%;}
     .col-lg-2{width: 16.666666%;}
@@ -61,6 +64,7 @@
     .col-lg-11{width: 91.666666%;}
     .col-lg-12{width: 100%;}
 }
+/* 最小尺寸1200 */
 @media screen and (min-width: 1200px){
     .col-xl-1{width: 8.333333%;}
     .col-xl-2{width: 16.666666%;}
