--- a/hw_20211227maikon/style.scss
+++ b/hw_20211227maikon/style.scss
@@ -1,15 +1,17 @@
+
 .header{
     display: flex;
     width: 100%;
     position: sticky;
     top: 0;
     background-color: white;
+    z-index: 1;
 }
 .header{
     img{
-        margin-left: 170px;
-        margin-top: 25px;
-        margin-right: 350px;
+        margin-left: 18%;
+        margin-top: 1%;
+        margin-right: 20%;
     }
 }
 .title-services{
@@ -23,7 +25,7 @@
         }
     }
 }
-.header P{
+.header span a{
     color: #3E3E3E;
     border: 1px solid #aaa;
     padding: 15px 15px 15px 15px;
@@ -32,7 +34,7 @@
     font-size: 10px;
     font-weight: bold;
 }
-.header p:hover{
+.header span a:hover{
     background-color: #31F54B;
     color: white;
     transition: 0.3s;
@@ -140,9 +142,6 @@
         color: white;
         line-height: 25px;
     }
-    a{
-        
-    }
 }
 .order-secvices-link{
     a{
@@ -160,4 +159,143 @@
     background-color: #31F54B;
     color: white;
     transition: 0.3s;
+}
+.row-steps{
+    align-items: center;
+}
+.steps-txt{
+    h1{
+        font-size: 50px;
+        color: #606060;
+        margin-top: 100px;
+    }
+    h2{
+        color: #606060;
+        font-size: 30px;
+        color: #606060;
+    }
+    p{
+        color: #888888;
+        margin-top: 25px;
+        line-height: 20px;
+    }
+    a{
+        color: #3E3E3E;
+        border: 1px solid #aaa;
+        padding: 15px 15px 15px 15px;
+        font-size: 10px;
+        font-weight: bold;
+        display: inline-block;
+        text-decoration: none;
+        margin-left: 400px;
+        margin-top: 150px;
+    }
+    a:hover{
+        background-color: #31F54B;
+        color: white;
+        transition: 0.3s;
+    }
+}
+.row-three{
+    flex-direction: row-reverse;
+}
+.pic-projects{
+    margin-top: 50px;
+    position: relative;
+}
+.show{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-left: 20px;
+        margin: auto;
+        opacity: 0;
+        font-size: 20px;
+        display: flex;
+        flex-direction: column;justify-content: space-around;
+        font-size: 20px;
+}
+.pic-projects:hover{
+    .show{
+        background-color: #1fde82;
+        opacity: 1;
+        transition: 0.5s;
+    }
+}
+.sign-txt{
+    p{
+        font-size: 50px;
+        color: #606060;
+        margin-top: 100px;
+    }
+    input,textarea{
+        width: 100%;
+        height: 30px;
+        margin-top: 30px;
+        resize: vertical;
+        font-size: 15px;
+    }
+    button{
+        background-color: #31F54B;
+        color: white;
+        margin-top: 30px;
+        padding: 10px;
+        border: none;
+    }
+}
+.subscribe-txt{
+        text-align: center;
+        font-size: 50px;
+        color: #606060;
+    
+        input{
+            align-items: center;
+            width: 650px;
+            height: 30px;
+        }
+        button{
+            background-color: #31F54B;
+            color: white;
+            margin-top: 30px;
+            padding: 10px;
+            border: none;
+        }
+    }
+.footer{
+    margin-top: 100px;
+        .footer-txt{
+            span{
+                color: #31F54B;
+            }
+            a{
+                color: #888888;
+                text-decoration: none;
+                line-height: 30px;
+                font-size: 15px;
+            }
+            p{
+                margin-bottom: 10px;
+                color: #3E3E3E;
+                font-size: 30px;
+            }
+            #last{
+                color: #888888;
+                font-size: 15px;
+                margin-top: 50px;
+                line-height: 20px;
+            }
+            .icon i{
+                border: 1px solid #888888;
+                border-radius: 50%;
+                padding: 10px;
+            }
+            .icon i:hover{
+                background-color: #1fde82;
+                opacity: 1;
+                transition: 0.5s;
+                color: white;
+            }
+        }
 }
